# burnup-chart

./: .gitignore  README.md  main.py  pyproject.toml  update_task_dates.py
.github/workflows/: ci.yml
src/: burnup_manager.py  burnup_system.py  chart_generator.py  check_quality.py  data_filter.py  data_loader.py  database_model.py  progress_calculator.py
tests/: test_burnup_integration.py  test_burnup_system.py  test_check_quality.py  test_data_filter.py  test_main.py  test_update_task_dates_cli.py
tests/data/: sample_plan.csv
